--- a/frontend/src/components/LoginForm/LoginForm.module.css
+++ b/frontend/src/components/LoginForm/LoginForm.module.css
@@ -3,14 +3,15 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #f2f2f2; /* Цвет фона */
+    background-color: #ffffff;
 }
 
 .form {
-    background-color: #fff;
+    width: 90%;
+    background-color: #787878;
     padding: 40px;
     border-radius: 20px;
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1); /* Увеличенная тень */
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
 }
 
 .formGroup {
@@ -19,12 +20,19 @@
 }
 
 .label {
+    border: 1px solid #ccc;
+    width: 100%;
+    padding: 0.2rem;
+    border-radius: 10px;
+    background-color: #d2d2d2;
     font-weight: bold;
-    color: #333;
-    margin-bottom: 10px;
+    color: black;
+    margin-bottom: 0.5rem;
+    box-shadow: 0 2px 4px rgb(204, 204, 204)
 }
 
 .input {
+    outline: none;
     width: 100%;
     height: 50px;
     border: 1px solid #ccc;
@@ -42,8 +50,8 @@
 
 .button {
     padding: 15px;
-    width: 50%;
-    background-color: #a99f7a;
+    width: 90%;
+    background-color: #000000;
     border: none;
     border-radius: 20px;
     color: #fff;
@@ -51,8 +59,9 @@
     transition: background-color 0.3s ease;
     font-weight: bold;
     font-size: 18px;
+    box-shadow: 0 4px 8px rgb(204, 204, 204)
 }
 
 .button:hover {
-    background-color: #91826b;
+    background-color: #787878;
 }
