--- a/frontend/src/components/UserProfile/UserProfile.module.css
+++ b/frontend/src/components/UserProfile/UserProfile.module.css
@@ -1,17 +1,62 @@
 .textCenter {
-    text-align: center;
-}
-
-.container {
     margin-top: 5rem;
+    margin-bottom: 3rem;
     display: flex;
     flex-direction: column;
     align-items: center;
+    text-align: center;
 }
 
-.heading {
-    color: #bcba91;
+.infoContainer {
+    margin-top: 2rem;
+    width: 90%;
+    padding: 20px;
+    background-color: #787878;
+    border-radius: 10px;
+    border: 1px solid #ffffff;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
 }
+
+.label {
+    width: 100%;
+    margin-top: 0.1rem;
+    border: 1px solid #ffffff;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
+    background-color: #000000;
+    border-radius: 10px;
+    padding: 0.4rem;
+    font-weight: bold;
+    color: #ffffff;
+    margin-bottom: 5px;
+}
+
+.nameContainer {
+    margin-top: 2rem;
+    padding: 20px;
+    background-color: #d2d2d2;
+    border-radius: 10px;
+    justify-content: center;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
+}
+
+.phoneContainer {
+    margin-top: 2rem;
+    padding: 20px;
+    background-color: #d2d2d2;
+    border-radius: 10px;
+    justify-content: center;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
+}
+
+.aboutContainer {
+    margin-top: 2rem;
+    width: 90%;
+    background-color: #787878;
+    border-radius: 10px;
+    border: 1px solid #ffffff;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
 
 .imageContainer {
     position: relative;
@@ -27,8 +72,8 @@
     width: 100%;
     height: 100%;
     border-radius: 50%;
-    background-color: #eee; /* Цвет фона по умолчанию */
-    color: #666; /* Цвет текста */
+    background-color: #eee;
+    color: #666;
     font-size: 24px;
 }
 
@@ -36,7 +81,8 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
-    border-radius: 50%; /* Делаем изображение круглым */
+    border-radius: 50%;
+    border: 0.1rem solid #000000;
 }
 
 .imageInput {
@@ -49,25 +95,17 @@
     cursor: pointer;
 }
 
-.inputContainer {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    margin-bottom: 10px;
-}
-
-.label {
-    font-weight: bold;
-    color: #333;
-    margin-bottom: 5px;
-}
 
 .input {
-    width: 300px;
+    width: 100%;
     height: 30px;
     margin-bottom: 10px;
     border-radius: 5px;
     padding: 5px;
+}
+
+.form-control {
+    width: 100%;
 }
 
 .inputError {
@@ -80,6 +118,7 @@
 }
 
 .button {
+    margin-top: 2rem;
     padding: 5px 10px;
     border: none;
     border-radius: 1rem;
@@ -90,12 +129,18 @@
 }
 
 .saveChangesButton {
-    background-color: #bcba91;
+    width: 90%;
+    background-color: #000000;
+    border-radius: 10px;
+    border: 1px solid #ffffff;
 }
 
 .logoutButton {
-    background-color: #bcba91;
-    margin-top: 10px;
+    width: 90%;
+    background-color: #000000;
+    border-radius: 10px;
+    border: 1px solid #ffffff;
+    margin-top: 1rem;
 }
 
 .button:hover {
@@ -103,10 +148,11 @@
 }
 
 .textarea {
-    width: 100%;
-    padding: 8px;
+    outline: none;
+    width: 90%;
+    padding: 1rem;
     border: 1px solid #ccc;
-    border-radius: 4px;
+    border-radius: 10px;
     resize: none;
 }
 
