--- a/frontend/src/components/Users/Users.module.css
+++ b/frontend/src/components/Users/Users.module.css
@@ -63,7 +63,7 @@
     border: white 0.1rem solid;
     border-top-left-radius: 0.5rem;
     border-top-right-radius: 0.5rem;
-    background: #6c6161;
+    background: #787878;
 }
 
 .userDetailsHeader h3 {
