--- a/frontend/src/components/BottomNavBar/BottomNavBar.css
+++ b/frontend/src/components/BottomNavBar/BottomNavBar.css
@@ -2,10 +2,10 @@
     border: var(--small-border-radius) var(--border-color) solid;
     border-top-left-radius: 2.3rem;
     border-top-right-radius: 2.3rem;
-    background: var(--medium-beige);
-    height: 5.6rem;
+    background: var(--default-background-color);
+    height: 5.5rem;
     position: fixed;
-    width: 98.7%;
+    width: 99.5%;
     bottom: 0;
     display: flex;
     justify-content: center;
@@ -14,14 +14,14 @@
 }
 
 .button {
-    width: 3rem;
-    height: 3rem;
+    width: 4rem;
+    height: 4rem;
     border: var(--small-border-size) var(--border-color) solid;
-    border-radius: 50%;
-    background: var(--default-font-color);
-    color: var(--light-beige);
-    margin: 0 0.5rem;
-    font-size: 2rem;
+    border-radius: var(--large-border-radius);
+    background: var(--default-background-color);
+    color: var(--default-font-color);
+    margin: 0 1rem 1rem 1rem;
+    font-size: 2.5rem;
     text-align: center;
-    line-height: 3rem;
+    line-height: 4rem;
 }
