если че откатить этот коммит)) ++build

--- a/frontend/src/components/LoginForm/LoginForm.css
+++ b/frontend/src/components/LoginForm/LoginForm.css
@@ -23,6 +23,7 @@
 }
 
 .loginForm button {
+    color: black;
     font-weight: bolder;
     background-color: white;
     border: var(--border-color) var(--small-border-size) solid;
