--- a/frontend/src/components/Modal/Modal.css
+++ b/frontend/src/components/Modal/Modal.css
@@ -17,7 +17,7 @@
 }
 
 .modal-content {
-    background-color: var(--default-background-color);
+    background-color: white;
     padding: 20px;
     border: var(--small-border-size) solid var(--border-color);
     border-radius: var(--large-border-radius);
@@ -32,6 +32,7 @@
     font-size: 1rem;
     width: 100%;
     resize: none;
+    border: none;
     position: relative;
 }
 
