--- a/frontend/src/components/Orders/Orders.css
+++ b/frontend/src/components/Orders/Orders.css
@@ -7,3 +7,10 @@
     font-size: 1.2rem;
     border-radius: var(--small-border-radius);
 }
+
+.orderText {
+    text-align: left;
+    max-height: 150px;
+    overflow-y: auto;
+    white-space: pre-line;
+}
